# tracker-demo

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  pyproject.toml
alembic/: env.py
scripts/: dashboard.py  generate_sample_data.py  loader.py  migrate.py  show_analytics.py
src/tracker/: __init__.py
src/tracker/analytics/: __init__.py  analyzer.py
src/tracker/analytics/accounting/: __init__.py  avg_cost.py  cash.py  fifo.py  lifo.py  strategy.py
src/tracker/analytics/core/: __init__.py  holdings.py  performance.py  price_manager.py  risk_metrics.py
src/tracker/api/: __init__.py
src/tracker/config/: __init__.py  decorators.py  logger.py
src/tracker/data/access/: __init__.py  binance_api.py  morningstar_api.py  yf_api.py
src/tracker/data/managers/: __init__.py  csv_manager.py  db_manager.py  fk_resolver.py
src/tracker/data/orm/: __init__.py  account.py  base.py  cash_flow.py  currency.py  instrument.py  lookups.py  market_data.py  portfolio.py  transaction.py
src/tracker/data/repos/: __init__.py  cf_repo.py  mkt_repo.py  repository.py  tx_repo.py
src/tracker/services/: analytics.py  data_transfers.py  service.py
tests/: __init__.py  test_csv_managers.py  test_data_access.py  test_db_mgr.py  test_modular_analytics.py  test_orm_models.py
